--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,5 @@ build/Release
 # https://docs.npmjs.com/misc/faq#should-i-check-my-node-modules-folder-into-git
 node_modules
 
+### Project Specific ###
+styles/app.css
