Begins implementing custom select web component using polymer.

--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
   "description": "The client for the releasely application.",
   "private": true,
   "dependencies": {
-    "normalize-css": "normalize.css#~3.0.3"
+    "normalize-css": "normalize.css#~3.0.3",
+    "polymer": "Polymer/polymer#~1.1.5"
   }
 }
